--- a/style.css
+++ b/style.css
@@ -2,3 +2,17 @@ body {
     flex-direction: column;
     /* background-color: aqua; */
 }
+
+.mainContent {
+    display: flex;
+    
+    align-items: center;
+    align-content: center;
+    margin: 10px;
+
+    width: 80%;
+    height: 200px;
+
+    border: 2px solid black;
+    /* background-color: green; */
+}
